--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio-three-teal-21.vercel.app/">
+    <meta property="og:url" content="https://metatags.io/">
     <meta property="og:title" content="Мое портфолио">
     <meta property="og:description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
     <meta property="og:image" content="img/main_bg.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://portfolio-three-teal-21.vercel.app/">
+    <meta property="twitter:url" content="https://metatags.io/">
     <meta property="twitter:title" content="Мое портфолио">
     <meta property="twitter:description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
     <meta property="twitter:image" content="img/main_bg.png">
