--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Админ-панель модерации отзывов" />
     <title>Админ-панель | Модерация отзывов</title>
-    <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
     <div id="app"></div>
     <script type="module">
-      import Admin from './pages/Admin/Admin.js';
+      import Admin from '../pages/Admin/Admin.js';
       
       // Рендер админ-панели
       const app = document.getElementById('app');
@@ -19,4 +18,3 @@
     </script>
   </body>
 </html>
-
