fix: correct i18n import and initialization in page HTML files
Fixed JavaScript error in testimonial-form.html:
- Changed import from named export to default export for i18n
- Removed .then() call since i18n.init() doesn't return a promise
- Added i18n initialization to admin.html for consistency

Error was: 'Cannot read properties of undefined (reading then)'
This happened because i18n.init() returns void, not a promise

Now pages will load correctly without JavaScript errors

--- a/src/pages/testimonial-form.html
+++ b/src/pages/testimonial-form.html
@@ -10,15 +10,15 @@
     <div id="app"></div>
     <script type="module">
       import TestimonialForm from '../pages/TestimonialForm/TestimonialForm.js';
-      import { i18n } from '../utils/i18n.js';
+      import i18n from '../utils/i18n.js';
       
       // Инициализация i18n
-      i18n.init().then(() => {
-        // Рендер формы
-        const app = document.getElementById('app');
-        app.innerHTML = TestimonialForm.render();
-        TestimonialForm.init();
-      });
+      i18n.init();
+      
+      // Рендер формы
+      const app = document.getElementById('app');
+      app.innerHTML = TestimonialForm.render();
+      TestimonialForm.init();
     </script>
   </body>
 </html>
