--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -10,6 +10,10 @@
     <div id="app"></div>
     <script type="module">
       import Admin from '../pages/Admin/Admin.js';
+      import i18n from '../utils/i18n.js';
+      
+      // Инициализация i18n
+      i18n.init();
       
       // Рендер админ-панели
       const app = document.getElementById('app');
