fix: correct i18n import syntax in testimonial-form.html
Fixed import to use named export { i18n } instead of default export
The i18n.js file exports named export, not default

--- a/src/pages/testimonial-form.html
+++ b/src/pages/testimonial-form.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
     <script type="module">
       import TestimonialForm from '../pages/TestimonialForm/TestimonialForm.js';
-      import i18n from '../utils/i18n.js';
+      import { i18n } from '../utils/i18n.js';
       
       // Инициализация i18n
       i18n.init();
