--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -19,6 +19,10 @@
     <script type="module">
       import Admin from '../pages/Admin/Admin.js';
       import { i18n } from '../utils/i18n.js';
+      import { ThemeManager } from '../utils/themeManager.js';
+      
+      // Инициализация темы (загружает из localStorage)
+      ThemeManager.init();
       
       // Инициализация i18n
       i18n.init();
