fix: add privacy policy and personal data consent pages to Vite config
- Added privacy-policy.html and personal-data-consent.html to rollupOptions.input
- Added entry file names configuration for new pages
- Updated page indicators in SCSS path detection logic
- Fixed import paths in HTML files to match project structure
- Pages are now properly built and accessible at /privacy-policy.html and /personal-data-consent.html

--- a/src/pages/personal-data-consent.html
+++ b/src/pages/personal-data-consent.html
@@ -17,7 +17,7 @@
   <body>
     <div id="app"></div>
     <script type="module">
-      import PersonalDataConsent from './PersonalDataConsent/PersonalDataConsent.js';
+      import PersonalDataConsent from '../pages/PersonalDataConsent/PersonalDataConsent.js';
       import { i18n } from '../utils/i18n.js';
       import { ThemeManager } from '../utils/themeManager.js';
       
