--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -17,7 +17,7 @@
   <body>
     <div id="app"></div>
     <script type="module">
-      import PrivacyPolicy from './PrivacyPolicy/PrivacyPolicy.js';
+      import PrivacyPolicy from '../pages/PrivacyPolicy/PrivacyPolicy.js';
       import { i18n } from '../utils/i18n.js';
       import { ThemeManager } from '../utils/themeManager.js';
       
