--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <meta name="apple-mobile-web-app-title" content="Portfolio" />
     <link rel="manifest" href="/favicon/site.webmanifest" />
   </head>
-  <body class="page-loading">
+  <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
